Source/WebCore/rendering/LineWidth.h
@@ -31,6 +31,7 @@
 #define LineWidth_h
 
 #include "LayoutUnit.h"
+#include <wtf/HashMap.h>
 
 namespace WebCore {
 
@@ -53,12 +54,13 @@ public:
     float currentWidth() const { return m_committedWidth + m_uncommittedWidth; }
     // FIXME: We should eventually replace these three functions by ones that work on a higher abstraction.
     float uncommittedWidth() const { return m_uncommittedWidth; }
+    float uncommittedWidthForObject(const RenderObject&) const;
     float committedWidth() const { return m_committedWidth; }
     float availableWidth() const { return m_availableWidth; }
 
     void updateAvailableWidth(LayoutUnit minimumHeight = 0);
     void shrinkAvailableWidthForNewFloatIfNeeded(FloatingObject*);
-    void addUncommittedWidth(float delta) { m_uncommittedWidth += delta; }
+    void addUncommittedWidth(float delta, const RenderObject&);
     void commit();
     void applyOverhang(RenderRubyRun*, RenderObject* startRenderer, RenderObject* endRenderer);
     void fitBelowFloats();
@@ -88,6 +90,7 @@ private:
 #endif
     bool m_isFirstLine;
     IndentTextOrNot m_shouldIndentText;
+    HashMap<const RenderObject*, float> m_uncommittedWidthMap;
 };
 
 }
